--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -1,5 +1,4 @@
 .homepage{
-    background-color: lightblue;
     display: table;
     width: 98%;
     height: 100%;
@@ -9,7 +8,7 @@
 }
 
 .upperpart{
-    background-color: lightgreen;
+    background-color: white;
     float:left; 
     display: table-cell;
     width: 100%;
@@ -28,7 +27,6 @@
 }
 
 .firstquarter{
-    background-color: lightsalmon;
     float: left;
     width: 98%;
     height: 33%;
@@ -38,7 +36,12 @@
     margin-right: 1%;
 }
 
+.upperpart{
+    border-bottom: solid gray;
+}
+
 .top-heading{
-    color: orange;
+    color: black;
     font-family: serif;
+    font-size: larger;
 }
