--- a/src/components/Utils/Bodyfat/Bodyfat.css
+++ b/src/components/Utils/Bodyfat/Bodyfat.css
@@ -5,6 +5,7 @@
     display: table-cell;
     width: 100%;
     height: 40%;
+    border-radius: 10px;
 }
 
 .Firstone{
@@ -12,6 +13,7 @@
     float: left;
     width: 49.5%;
     height: 35%;
+    border-radius: 10px;
 }
 
 .Secondone{
@@ -19,6 +21,7 @@
     margin-left: 50.5%;
     width: 49.5%;
     height: 35%;
+    border-radius: 10px;
 }
 
 .Buttonenter{
